# cTetris

./: .clangd  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  cTetris.desktop  cTetris.js  cTetris.wasm  cTetris_256.xcf  index.html  resource.rc  run.sh  script.js  style.css  tetris
.github/workflows/: ci.yml
cmake/: toolchain-mingw64.cmake
include/: assets.h  ctetris.h  renderer.h  rlgl.h  score.h
package/: cTetris  cTetris.desktop
src/: assets.c  ctetris.c  main.c  renderer.c  score.c
web/: shell.html
